# simdcsv

./: .gitignore  Cargo.toml  MIGRATION.md  README.md
.cargo/: config.toml
.github/workflows/: README.md  ci.yml  publish.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  simdcsv
src/: io.rs  io_util.h  lib.rs  main.rs  memory.rs  parser.rs  portability.rs
